# DEM_Evaluate

./: CMakeLists.txt  README.txt  main.cpp
input/results/contourHill/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillEasy/: estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillJoin/: estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillJoinEasy/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillJoinSmall/: centres.tif  estimate.tif  final.tif  landscape.tif  mask.tif  watershed.tif
input/results/contourHillJoinSmallEasy/: estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillJoinSpread/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillSmall/: estimate.tif  final.tif  landscape.tif  mask.tif  watershed.tif
input/results/contourHillSmallEasy/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillSmallSpread/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/contourHillSpread/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/flat/: centres.tif  estimate.tif  final.tif  watershed.tif
input/results/flatEasy/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/flatSmall/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/flatSmallEasy/: centres.tif  estimate.tif  final.tif  mask.tif  watershed.tif
input/results/flatSpread/: centres.tif  (+5 more)
(+90 files in other folders)
